reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220201"
---
# <span data-ttu-id="f54e9-103">Microsoft.PowerShell.Utility 모듈</span><span class="sxs-lookup"><span data-stu-id="f54e9-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="f54e9-104">Description</span><span class="sxs-lookup"><span data-stu-id="f54e9-104">Description</span></span>

<span data-ttu-id="f54e9-105">이 섹션에는 Microsoft PowerShell 유틸리티 모듈과 함께 설치 된 cmdlet에 대 한 도움말 항목이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="f54e9-106">이 모듈에는 PowerShell의 기본 기능을 관리 하는 cmdlet이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="f54e9-107">Microsoft PowerShell 유틸리티 Cmdlet</span><span class="sxs-lookup"><span data-stu-id="f54e9-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="f54e9-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="f54e9-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="f54e9-109">사용자 지정 속성 및 메서드를 PowerShell 개체의 인스턴스에 추가 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="f54e9-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="f54e9-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="f54e9-111">PowerShell 세션에 Microsoft .NET Framework 클래스를 추가 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="f54e9-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="f54e9-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="f54e9-113">변수 값을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="f54e9-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="f54e9-115">두 개체 집합을 비교합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="f54e9-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="f54e9-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="f54e9-117">예제와 일치 하도록 문자열의 형식을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="f54e9-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="f54e9-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="f54e9-119">CSV(쉼표로 구분된 값) 형식의 개체 속성을 원래 개체의 CSV 버전으로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="f54e9-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="f54e9-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="f54e9-121">JSON 형식 문자열을 사용자 지정 개체로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="f54e9-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="f54e9-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="f54e9-123">SDDL 문자열을 사용자 지정 개체로 변환 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="f54e9-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="f54e9-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="f54e9-125">문자열 콘텐츠에서 구조화 된 속성을 추출 하 고 구문 분석 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="f54e9-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="f54e9-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="f54e9-127">키와 값 쌍이 하나 이상 포함된 문자열을 해시 테이블로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="f54e9-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="f54e9-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="f54e9-129">.NET 개체를 일련의 CSV (쉼표로 구분 된 값) 문자열로 변환 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="f54e9-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="f54e9-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="f54e9-131">.NET 개체를 웹 브라우저에 표시할 수 있는 HTML로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="f54e9-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="f54e9-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="f54e9-133">개체를 JSON 형식 문자열로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="f54e9-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="f54e9-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="f54e9-135">개체의 XML 기반 표시를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="f54e9-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="f54e9-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="f54e9-137">Runspace를 사용 하 여 대화형 디버깅 세션을 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="f54e9-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f54e9-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="f54e9-139">현재 콘솔의 중단점을 해제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="f54e9-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="f54e9-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="f54e9-141">하나 이상의 runspace에서 디버깅을 사용 하지 않도록 설정 하 고 보류 중인 모든 디버거 중지를 해제 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="f54e9-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f54e9-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="f54e9-143">현재 콘솔의 중단점을 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="f54e9-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="f54e9-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="f54e9-145">디버거가 연결 될 때까지 중단점이 유지 되는 runspace에서 디버깅을 사용 하도록 설정 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="f54e9-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="f54e9-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="f54e9-147">현재 정의된 별칭에 대한 정보를 파일로 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="f54e9-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="f54e9-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="f54e9-149">개체의 XML 기반 표시를 만들고 이 표시를 파일에 저장합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="f54e9-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="f54e9-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="f54e9-151">개체를 일련의 쉼표로 구분 된 값 (CSV) 문자열로 변환 하 고 문자열을 파일에 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="f54e9-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="f54e9-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="f54e9-153">현재 세션의 형식 지정 데이터를 형식 지정 파일에 저장합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="f54e9-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="f54e9-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="f54e9-155">다른 세션에서 명령을 내보내고 PowerShell 모듈에 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="f54e9-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="f54e9-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="f54e9-157">사용자 지정된 보기를 사용하여 출력 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="f54e9-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="f54e9-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="f54e9-159">파일이 나 기타 입력을 16 진수로 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="f54e9-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="f54e9-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="f54e9-161">출력의 형식을 각 속성이 새 줄에 표시되는 속성 목록으로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="f54e9-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="f54e9-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="f54e9-163">출력 형식을 테이블로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="f54e9-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="f54e9-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="f54e9-165">개체를 각 개체의 한 속성만을 표시하는 넓은 표 형식으로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="f54e9-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="f54e9-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="f54e9-167">현재 세션의 별칭을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="f54e9-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="f54e9-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="f54e9-169">운영 체제의 현재 문화권 집합을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="f54e9-170">가져오기-날짜</span><span class="sxs-lookup"><span data-stu-id="f54e9-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="f54e9-171">현재 날짜 및 시간을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="f54e9-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="f54e9-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="f54e9-173">이벤트 큐의 이벤트를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="f54e9-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="f54e9-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="f54e9-175">현재 세션의 이벤트 구독자를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="f54e9-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="f54e9-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="f54e9-177">지정한 해시 알고리즘을 사용하여 파일에 대한 해시 값을 계산합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="f54e9-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="f54e9-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="f54e9-179">현재 세션에 있는 형식 지정 데이터를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="f54e9-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="f54e9-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="f54e9-181">현재 호스트 프로그램을 나타내는 개체를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="f54e9-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="f54e9-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="f54e9-183">개체의 속성 및 메서드를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="f54e9-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f54e9-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="f54e9-185">현재 세션에 설정된 중단점을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="f54e9-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="f54e9-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="f54e9-187">현재 호출 스택을 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="f54e9-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="f54e9-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="f54e9-189">난수를 가져오거나 컬렉션에서 개체를 임의로 선택합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="f54e9-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="f54e9-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="f54e9-191">PowerShell 호스트 프로세스 내의 활성 runspace를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="f54e9-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="f54e9-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="f54e9-193">Runspace 디버깅 옵션을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="f54e9-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="f54e9-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="f54e9-195">추적을 위해 계측 된 PowerShell 구성 요소를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="f54e9-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="f54e9-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="f54e9-197">현재 세션에 있는 확장 유형 데이터를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="f54e9-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="f54e9-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="f54e9-199">운영 체제의 현재 UI 문화권 설정을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="f54e9-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="f54e9-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="f54e9-201">정렬된 목록에서 고유한 항목을 반환합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="f54e9-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="f54e9-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="f54e9-203">현재 콘솔에 있는 변수를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="f54e9-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="f54e9-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="f54e9-205">승인 된 PowerShell 동사를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="f54e9-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="f54e9-207">지정한 속성에 대해 같은 값이 있는 개체를 그룹화합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="f54e9-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="f54e9-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="f54e9-209">파일에서 별칭 목록을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="f54e9-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="f54e9-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="f54e9-211">EXPORT-CLIXML 파일을 가져오고 PowerShell에서 해당 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="f54e9-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="f54e9-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="f54e9-213">쉼표로 구분 된 값 (CSV) 파일의 항목에서 테이블 형태의 사용자 지정 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="f54e9-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="f54e9-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="f54e9-215">운영 체제에 대해 선택한 UI 문화권을 기준으로 하여 언어별 데이터를 스크립트 및 함수로 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="f54e9-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="f54e9-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="f54e9-217">에서 값을 가져옵니다. PSD1 파일의 내용을 호출 하지 않고</span><span class="sxs-lookup"><span data-stu-id="f54e9-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="f54e9-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="f54e9-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="f54e9-219">다른 세션의 명령을 현재 세션으로 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="f54e9-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="f54e9-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="f54e9-221">로컬 컴퓨터에서 명령 또는 식을 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="f54e9-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="f54e9-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="f54e9-223">HTTP 또는 HTTPS 요청을 RESTful 웹 서비스로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="f54e9-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="f54e9-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="f54e9-225">인터넷의 웹 페이지에서 콘텐츠를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="f54e9-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="f54e9-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="f54e9-227">스크립트 블록 및 cmdlet을 실행하는 데 걸리는 시간을 측정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="f54e9-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="f54e9-229">개체의 숫자 속성과 텍스트 파일 등 문자열 개체의 문자, 단어 및 줄을 계산합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="f54e9-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="f54e9-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="f54e9-231">새 별칭을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-231">Creates a new alias.</span></span>

### [<span data-ttu-id="f54e9-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="f54e9-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="f54e9-233">새 이벤트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-233">Creates a new event.</span></span>

### [<span data-ttu-id="f54e9-234">새-Guid</span><span class="sxs-lookup"><span data-stu-id="f54e9-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="f54e9-235">GUID를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-235">Creates a GUID.</span></span>

### [<span data-ttu-id="f54e9-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="f54e9-237">Microsoft .NET Framework 또는 COM 개체의 인스턴스를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="f54e9-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="f54e9-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="f54e9-239">임시 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="f54e9-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="f54e9-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="f54e9-241">TimeSpan 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="f54e9-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="f54e9-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="f54e9-243">새 변수를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-243">Creates a new variable.</span></span>

### [<span data-ttu-id="f54e9-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="f54e9-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="f54e9-245">출력을 파일로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-245">Sends output to a file.</span></span>

### [<span data-ttu-id="f54e9-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="f54e9-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="f54e9-247">별도의 창에 있는 대화형 테이블로 출력을 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="f54e9-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="f54e9-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="f54e9-249">출력을 프린터로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="f54e9-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="f54e9-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="f54e9-251">입력 개체를 문자열로 출력 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="f54e9-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="f54e9-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="f54e9-253">콘솔에서 입력 줄을 읽습니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="f54e9-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="f54e9-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="f54e9-255">PowerShell 엔진 및 cmdlet에 의해 생성 된 이벤트를 구독 `New-Event` 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="f54e9-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="f54e9-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="f54e9-257">Microsoft .NET Framework 개체에서 생성된 이벤트를 구독합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="f54e9-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="f54e9-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="f54e9-259">이벤트 큐에서 이벤트를 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="f54e9-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f54e9-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="f54e9-261">현재 콘솔에서 중단점을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="f54e9-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="f54e9-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="f54e9-263">현재 세션에서 확장 유형을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="f54e9-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="f54e9-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="f54e9-265">변수와 그 값을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="f54e9-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="f54e9-267">개체 또는 개체 속성을 선택합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="f54e9-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="f54e9-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="f54e9-269">문자열 및 파일에서 텍스트를 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="f54e9-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="f54e9-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="f54e9-271">XML 문자열 또는 문서에서 텍스트를 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="f54e9-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="f54e9-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="f54e9-273">이메일 메시지를 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-273">Sends an email message.</span></span>

### [<span data-ttu-id="f54e9-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="f54e9-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="f54e9-275">현재 PowerShell 세션의 cmdlet 또는 다른 명령에 대 한 별칭을 만들거나 변경 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="f54e9-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="f54e9-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="f54e9-277">컴퓨터의 시스템 시간을 지정한 시간으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="f54e9-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f54e9-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="f54e9-279">줄, 명령 또는 변수에 중단점을 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="f54e9-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="f54e9-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="f54e9-281">PowerShell 구성 요소의 추적을 구성, 시작 및 중지 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="f54e9-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="f54e9-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="f54e9-283">변수 값을 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="f54e9-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="f54e9-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="f54e9-285">그래픽 창에 PowerShell 명령 정보를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="f54e9-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="f54e9-287">속성 값에 따라 개체를 정렬합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="f54e9-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="f54e9-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="f54e9-289">지정한 기간 동안 스크립트 또는 세션의 활동을 일시 중단합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="f54e9-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="f54e9-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="f54e9-291">명령 출력을 파일 또는 변수에 저장하고 파이프라인으로도 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="f54e9-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="f54e9-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="f54e9-293">지정된 식 또는 명령의 추적을 구성하고 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="f54e9-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="f54e9-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="f54e9-295">인터넷에서 다운로드한 파일 차단을 해제합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="f54e9-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="f54e9-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="f54e9-297">이벤트 구독을 취소합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="f54e9-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="f54e9-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="f54e9-299">현재 세션에 있는 형식 지정 데이터를 업데이트합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="f54e9-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="f54e9-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="f54e9-301">개체 컬렉션을 포함하는 속성 값에 항목을 추가하거나 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="f54e9-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="f54e9-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="f54e9-303">세션에 있는 확장 유형 데이터를 업데이트합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="f54e9-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="f54e9-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="f54e9-305">스크립트에서 다음 문을 실행 하기 전에 디버거에서 스크립트를 중지 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="f54e9-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="f54e9-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="f54e9-307">계속 실행하기 전에 특정 이벤트가 발생할 때까지 대기합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="f54e9-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="f54e9-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="f54e9-309">콘솔에 디버그 메시지를 씁니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="f54e9-310">쓰기 오류</span><span class="sxs-lookup"><span data-stu-id="f54e9-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="f54e9-311">오류 스트림에 개체를 기록합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="f54e9-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="f54e9-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="f54e9-313">사용자 지정된 출력을 호스트에 씁니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="f54e9-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="f54e9-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="f54e9-315">PowerShell에서 명령에 대 한 정보 스트림 데이터를 처리 하는 방법을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="f54e9-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="f54e9-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="f54e9-317">지정된 개체를 파이프라인의 다음 명령으로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="f54e9-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="f54e9-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="f54e9-319">PowerShell 명령 창 내에 진행률 표시줄을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="f54e9-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="f54e9-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="f54e9-321">자세한 정보 메시지 스트림에 텍스트를 씁니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="f54e9-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="f54e9-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="f54e9-323">경고 메시지를 씁니다.</span><span class="sxs-lookup"><span data-stu-id="f54e9-323">Writes a warning message.</span></span>
