reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220402"
---
# <span data-ttu-id="26673-103">Microsoft.PowerShell.Utility 모듈</span><span class="sxs-lookup"><span data-stu-id="26673-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="26673-104">Description</span><span class="sxs-lookup"><span data-stu-id="26673-104">Description</span></span>

<span data-ttu-id="26673-105">이 섹션에는 Microsoft PowerShell 유틸리티 모듈과 함께 설치 된 cmdlet에 대 한 도움말 항목이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="26673-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="26673-106">이 모듈에는 PowerShell의 기본 기능을 관리 하는 cmdlet이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="26673-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="26673-107">Microsoft PowerShell 유틸리티 Cmdlet</span><span class="sxs-lookup"><span data-stu-id="26673-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="26673-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="26673-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="26673-109">사용자 지정 속성 및 메서드를 PowerShell 개체의 인스턴스에 추가 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="26673-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="26673-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="26673-111">PowerShell 세션에 Microsoft .NET Core 클래스를 추가 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="26673-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="26673-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="26673-113">변수 값을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="26673-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="26673-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="26673-115">두 개체 집합을 비교합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="26673-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="26673-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="26673-117">CSV(쉼표로 구분된 값) 형식의 개체 속성을 원래 개체의 CSV 버전으로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="26673-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="26673-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="26673-119">JSON 형식 문자열을 사용자 지정 개체 또는 해시 테이블로 변환 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="26673-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="26673-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="26673-121">문자열 또는 파일의 내용을 **Markdowninfo** 개체로 변환 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="26673-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="26673-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="26673-123">SDDL 문자열을 사용자 지정 개체로 변환 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="26673-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="26673-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="26673-125">키와 값 쌍이 하나 이상 포함된 문자열을 해시 테이블로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="26673-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="26673-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="26673-127">.NET 개체를 일련의 CSV (쉼표로 구분 된 값) 문자열로 변환 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="26673-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="26673-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="26673-129">.NET 개체를 웹 브라우저에 표시할 수 있는 HTML로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="26673-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="26673-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="26673-131">개체를 JSON 형식 문자열로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="26673-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="26673-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="26673-133">개체의 XML 기반 표시를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="26673-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="26673-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="26673-135">Runspace를 사용 하 여 대화형 디버깅 세션을 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="26673-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="26673-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="26673-137">현재 콘솔의 중단점을 해제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="26673-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="26673-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="26673-139">하나 이상의 runspace에서 디버깅을 사용 하지 않도록 설정 하 고 보류 중인 모든 디버거 중지를 해제 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="26673-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="26673-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="26673-141">현재 콘솔의 중단점을 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="26673-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="26673-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="26673-143">디버거가 연결 될 때까지 중단점이 유지 되는 runspace에서 디버깅을 사용 하도록 설정 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="26673-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="26673-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="26673-145">현재 정의된 별칭에 대한 정보를 파일로 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="26673-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="26673-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="26673-147">개체의 XML 기반 표시를 만들고 이 표시를 파일에 저장합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="26673-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="26673-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="26673-149">개체를 일련의 쉼표로 구분 된 값 (CSV) 문자열로 변환 하 고 문자열을 파일에 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="26673-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="26673-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="26673-151">현재 세션의 형식 지정 데이터를 형식 지정 파일에 저장합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="26673-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="26673-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="26673-153">다른 세션에서 명령을 내보내고 PowerShell 모듈에 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="26673-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="26673-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="26673-155">사용자 지정된 보기를 사용하여 출력 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="26673-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="26673-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="26673-157">파일이 나 기타 입력을 16 진수로 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="26673-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="26673-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="26673-159">출력의 형식을 각 속성이 새 줄에 표시되는 속성 목록으로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="26673-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="26673-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="26673-161">출력 형식을 테이블로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="26673-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="26673-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="26673-163">개체를 각 개체의 한 속성만을 표시하는 넓은 표 형식으로 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="26673-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="26673-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="26673-165">현재 세션의 별칭을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="26673-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="26673-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="26673-167">운영 체제의 현재 문화권 집합을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="26673-168">가져오기-날짜</span><span class="sxs-lookup"><span data-stu-id="26673-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="26673-169">현재 날짜 및 시간을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="26673-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="26673-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="26673-171">현재 세션에서 가장 최근의 오류 메시지를 가져오고 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="26673-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="26673-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="26673-173">이벤트 큐의 이벤트를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="26673-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="26673-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="26673-175">현재 세션의 이벤트 구독자를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="26673-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="26673-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="26673-177">지정한 해시 알고리즘을 사용하여 파일에 대한 해시 값을 계산합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="26673-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="26673-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="26673-179">현재 세션에 있는 형식 지정 데이터를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="26673-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="26673-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="26673-181">현재 호스트 프로그램을 나타내는 개체를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="26673-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="26673-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="26673-183">콘솔에서 Markdown 콘텐츠를 렌더링 하는 데 사용 되는 현재 색과 스타일을 반환 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="26673-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="26673-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="26673-185">개체의 속성 및 메서드를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="26673-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="26673-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="26673-187">현재 세션에 설정된 중단점을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="26673-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="26673-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="26673-189">현재 호출 스택을 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="26673-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="26673-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="26673-191">난수를 가져오거나 컬렉션에서 개체를 임의로 선택합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="26673-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="26673-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="26673-193">PowerShell 호스트 프로세스 내의 활성 runspace를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="26673-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="26673-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="26673-195">Runspace 디버깅 옵션을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="26673-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="26673-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="26673-197">추적을 위해 계측 된 PowerShell 구성 요소를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="26673-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="26673-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="26673-199">현재 세션에 있는 확장 유형 데이터를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="26673-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="26673-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="26673-201">운영 체제의 현재 UI 문화권 설정을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="26673-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="26673-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="26673-203">정렬된 목록에서 고유한 항목을 반환합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="26673-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="26673-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="26673-205">마지막 부팅 이후 **TimeSpan** 을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="26673-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="26673-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="26673-207">현재 콘솔에 있는 변수를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="26673-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="26673-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="26673-209">승인 된 PowerShell 동사를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="26673-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="26673-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="26673-211">지정한 속성에 대해 같은 값이 있는 개체를 그룹화합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="26673-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="26673-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="26673-213">파일에서 별칭 목록을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="26673-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="26673-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="26673-215">EXPORT-CLIXML 파일을 가져오고 PowerShell에서 해당 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="26673-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="26673-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="26673-217">쉼표로 구분 된 값 (CSV) 파일의 항목에서 테이블 형태의 사용자 지정 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="26673-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="26673-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="26673-219">운영 체제에 대해 선택한 UI 문화권을 기준으로 하여 언어별 데이터를 스크립트 및 함수로 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="26673-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="26673-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="26673-221">`.PSD1`파일의 내용을 호출 하지 않고 파일에서 값을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="26673-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="26673-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="26673-223">다른 세션의 명령을 현재 세션으로 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="26673-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="26673-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="26673-225">로컬 컴퓨터에서 명령 또는 식을 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="26673-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="26673-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="26673-227">HTTP 또는 HTTPS 요청을 RESTful 웹 서비스로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="26673-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="26673-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="26673-229">인터넷의 웹 페이지에서 콘텐츠를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="26673-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="26673-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="26673-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="26673-231">파이프라인의 개체를 단일 문자열로 결합 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="26673-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="26673-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="26673-233">스크립트 블록 및 cmdlet을 실행하는 데 걸리는 시간을 측정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="26673-234">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="26673-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="26673-235">개체의 숫자 속성과 텍스트 파일 등 문자열 개체의 문자, 단어 및 줄을 계산합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="26673-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="26673-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="26673-237">새 별칭을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-237">Creates a new alias.</span></span>

### [<span data-ttu-id="26673-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="26673-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="26673-239">새 이벤트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-239">Creates a new event.</span></span>

### [<span data-ttu-id="26673-240">새-Guid</span><span class="sxs-lookup"><span data-stu-id="26673-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="26673-241">GUID를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-241">Creates a GUID.</span></span>

### [<span data-ttu-id="26673-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="26673-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="26673-243">Microsoft .NET Framework 또는 COM 개체의 인스턴스를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="26673-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="26673-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="26673-245">임시 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="26673-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="26673-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="26673-247">TimeSpan 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="26673-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="26673-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="26673-249">새 변수를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-249">Creates a new variable.</span></span>

### [<span data-ttu-id="26673-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="26673-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="26673-251">출력을 파일로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-251">Sends output to a file.</span></span>

### [<span data-ttu-id="26673-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="26673-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="26673-253">별도의 창에 있는 대화형 테이블로 출력을 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="26673-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="26673-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="26673-255">출력을 프린터로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="26673-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="26673-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="26673-257">입력 개체를 문자열로 출력 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="26673-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="26673-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="26673-259">콘솔에서 입력 줄을 읽습니다.</span><span class="sxs-lookup"><span data-stu-id="26673-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="26673-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="26673-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="26673-261">PowerShell 엔진 및 cmdlet에 의해 생성 된 이벤트를 구독 `New-Event` 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="26673-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="26673-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="26673-263">Microsoft .NET Framework 개체에서 생성된 이벤트를 구독합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="26673-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="26673-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="26673-265">현재 세션에서 별칭을 제거 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="26673-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="26673-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="26673-267">이벤트 큐에서 이벤트를 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="26673-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="26673-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="26673-269">현재 콘솔에서 중단점을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="26673-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="26673-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="26673-271">현재 세션에서 확장 유형을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="26673-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="26673-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="26673-273">변수와 그 값을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="26673-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="26673-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="26673-275">개체 또는 개체 속성을 선택합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="26673-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="26673-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="26673-277">문자열 및 파일에서 텍스트를 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="26673-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="26673-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="26673-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="26673-279">XML 문자열 또는 문서에서 텍스트를 찾습니다.</span><span class="sxs-lookup"><span data-stu-id="26673-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="26673-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="26673-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="26673-281">이메일 메시지를 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-281">Sends an email message.</span></span>

### [<span data-ttu-id="26673-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="26673-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="26673-283">현재 PowerShell 세션의 cmdlet 또는 다른 명령에 대 한 별칭을 만들거나 변경 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="26673-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="26673-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="26673-285">컴퓨터의 시스템 시간을 지정한 시간으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="26673-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="26673-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="26673-287">콘솔에서 Markdown 콘텐츠를 렌더링 하는 데 사용 되는 색 및 스타일을 설정 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="26673-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="26673-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="26673-289">줄, 명령 또는 변수에 중단점을 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="26673-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="26673-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="26673-291">PowerShell 구성 요소의 추적을 구성, 시작 및 중지 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="26673-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="26673-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="26673-293">변수 값을 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-293">Sets the value of a variable.</span></span> <span data-ttu-id="26673-294">요청한 이름이 있는 변수가 없으면 새로 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="26673-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="26673-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="26673-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="26673-296">그래픽 창에 PowerShell 명령 정보를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="26673-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="26673-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="26673-298">HTML을 사용 하는 브라우저에서 VT100 이스케이프 시퀀스를 사용 하 여 친숙 한 방법으로 콘솔에 Markdown 파일 또는 문자열을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="26673-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="26673-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="26673-300">속성 값에 따라 개체를 정렬합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="26673-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="26673-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="26673-302">지정한 기간 동안 스크립트 또는 세션의 활동을 일시 중단합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="26673-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="26673-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="26673-304">명령 출력을 파일 또는 변수에 저장하고 파이프라인으로도 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="26673-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="26673-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="26673-306">문자열이 유효한 JSON 문서 인지 테스트 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="26673-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="26673-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="26673-308">지정된 식 또는 명령의 추적을 구성하고 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="26673-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="26673-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="26673-310">인터넷에서 다운로드한 파일 차단을 해제합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="26673-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="26673-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="26673-312">이벤트 구독을 취소합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="26673-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="26673-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="26673-314">현재 세션에 있는 형식 지정 데이터를 업데이트합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="26673-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="26673-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="26673-316">개체 컬렉션을 포함하는 속성 값에 항목을 추가하거나 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="26673-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="26673-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="26673-318">세션에 있는 확장 유형 데이터를 업데이트합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="26673-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="26673-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="26673-320">스크립트에서 다음 문을 실행 하기 전에 디버거에서 스크립트를 중지 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="26673-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="26673-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="26673-322">계속 실행하기 전에 특정 이벤트가 발생할 때까지 대기합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="26673-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="26673-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="26673-324">콘솔에 디버그 메시지를 씁니다.</span><span class="sxs-lookup"><span data-stu-id="26673-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="26673-325">쓰기 오류</span><span class="sxs-lookup"><span data-stu-id="26673-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="26673-326">오류 스트림에 개체를 기록합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="26673-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="26673-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="26673-328">사용자 지정된 출력을 호스트에 씁니다.</span><span class="sxs-lookup"><span data-stu-id="26673-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="26673-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="26673-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="26673-330">PowerShell에서 명령에 대 한 정보 스트림 데이터를 처리 하는 방법을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="26673-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="26673-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="26673-332">지정된 개체를 파이프라인의 다음 명령으로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="26673-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="26673-333">명령이 파이프라인에서 마지막 명령인 경우 개체가 콘솔에 표시됩니다.</span><span class="sxs-lookup"><span data-stu-id="26673-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="26673-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="26673-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="26673-335">PowerShell 명령 창 내에 진행률 표시줄을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="26673-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="26673-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="26673-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="26673-337">자세한 정보 메시지 스트림에 텍스트를 씁니다.</span><span class="sxs-lookup"><span data-stu-id="26673-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="26673-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="26673-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="26673-339">경고 메시지를 씁니다.</span><span class="sxs-lookup"><span data-stu-id="26673-339">Writes a warning message.</span></span>
